# actix-sqlx

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20221031170552_create_users.sql
src/: main.rs
src/models/: user.rs
src/service/: users.rs
src/sql/users/: find_user.sql
