[package]
name = "actix-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "migrate"] }
derive_more = "0.99.0"
